force-app/main/default/objects/Adopter__c/Adopter__c.object-meta.xml
<CustomObject>
    <label>Adopter</label>
    <nameField>
        <label>Adopter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adopters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>