force-app/main/default/objects/Adopter__c/fields/AgeRange__c.field-meta.xml
<CustomField>
    <fullName>AgeRange__c</fullName>
    <label>Age Range</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>18-30</fullName>
            </value>
            <value>
                <fullName>31-40</fullName>
            </value>
            <value>
                <fullName>41-50</fullName>
            </value>
            <value>
                <fullName>60+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>