force-app/main/default/objects/Adopter__c/fields/NumberOfAdoptions__c.field-meta.xml
<CustomField>
    <fullName>NumberOfAdoptions__c</fullName>
    <label>Number Of Adoptions</label>
    <summaryForeignKey>Adoption__c.Adopter__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>