force-app/main/default/objects/Adopter__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Adopter phone number</description>
    <inlineHelpText>Adopter phone number</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>