force-app/main/default/objects/Adopter__c/fields/Warning__c.field-meta.xml
<CustomField>
    <fullName>Warning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked it means that this adopter has returned an animal with no relevant reason.</description>
    <inlineHelpText>If checked it means that this adopter has returned an animal with no relevant reason.</inlineHelpText>
    <label>Warning</label>
    <type>Checkbox</type>
</CustomField>