force-app/main/default/objects/Adopter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NumberOfAdoptions__c</columns>
    <columns>Warning__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>